--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PracticaAndroid</string>
+    <string name="start">Start</string>
+    <string name="credit">CRÉDITOS</string>
+    <string name="instructions">INSTRUCCIONES</string>
 </resources>
