--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">PracticaAndroid</string>
-    <string name="start">Start</string>
+    <string name="start">START \n (GYROSCOPE)  </string>
+    <string name="start2">START \n (COMPASS)  </string>
     <string name="credit">CRÉDITOS</string>
     <string name="instructions">INSTRUCCIONES</string>
+    <string name="lookGhost">Mueve el teléfono por tus alrededores. \n ¡El fantasma está cerca!</string>
 </resources>
