Changed name string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PracticaAndroid</string>
+    <string name="app_name">Ghostly Runes</string>
     <string name="start">START \n (GYROSCOPE)  </string>
     <string name="start2">START \n (COMPASS)  </string>
     <string name="credit">CRÉDITOS</string>
