--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="noGyroscope">Su dispositivo no tiene giroscopio.</string>
     <string name="noAccelerometer">Esta apliación no soporta dispositivos sin acelerómetro.</string>
     <string name="splatAppears">¡Oh no! ¡El fantasma te ha atacado\n ¡Agita el móvil para quitarte el ectoplasma de encima!</string>
-    <string name="ghostFound">¡Fantasma encontrado!</string>
+    <string name="ghostFound">¡Fantasma encontrado! \n ¡Desbloquea el patrón para derrotarlo!</string>
     <string name="shakeStronger"> "¡Tienes que agitar más fuerte para que se vaya el ectoplasma!"</string>
-    <string name="runeUnlocked">¡Bien, has desbloqueado la runa!</string>
+    <string name="ghostDefeated">¡Bien, has derrotado al fantasma!</string>
 
 </resources>
