--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,13 @@
     <string name="noAccelerometer">Esta apliación no soporta dispositivos sin acelerómetro.</string>
     <string name="splatAppears">¡Oh no! ¡El fantasma te ha atacado\n ¡Agita el móvil para quitarte el ectoplasma de encima!</string>
     <string name="ghostFound">¡Fantasma encontrado! \n ¡Desbloquea el patrón para derrotarlo!</string>
-    <string name="shakeStronger"> "¡Tienes que agitar más fuerte para que se vaya el ectoplasma!"</string>
+    <string name="shakeStronger"> ¡Tienes que agitar más fuerte para que se vaya el ectoplasma!</string>
     <string name="ghostDefeated">¡Bien, has derrotado al fantasma!</string>
+    <string name="creditTitle">Créditos</string>
+    <string name="creditMessage"><b>Carlos Paradela Pérez:</b>\n cparadela@correo.ugr.es \n\n\n <b>Miguel Keane Cañizares:</b>\n miguekeca@correo.ugr.es</string>
+    <string name="instructionTitle">Instrucciones</string>
+    <string name="instructionMessage">Encontrar y matar fantasmas</string>
+
+
 
 </resources>
