--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,13 @@
     <string name="shakeStronger"> ¡Tienes que agitar más fuerte para que se vaya el ectoplasma!</string>
     <string name="ghostDefeated">¡Bien, has derrotado al fantasma!</string>
     <string name="creditTitle">Créditos</string>
-    <string name="creditMessage"><b>Carlos Paradela Pérez:</b>\n cparadela@correo.ugr.es \n\n\n <b>Miguel Keane Cañizares:</b>\n miguekeca@correo.ugr.es</string>
+    <string name="emailCarlos">cparadela@correo.ugr.es</string>
+    <string name="emailMiguel">miguekeca@correo.ugr.es</string>
+    <string name="creditCarlos">Carlos Paradela Pérez:\n</string>
+    <string name="creditMiguel">Miguel Keane Cañizares:\n</string>
     <string name="instructionTitle">Instrucciones</string>
     <string name="instructionMessage">Encontrar y matar fantasmas</string>
+
 
 
 
