--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,8 +13,8 @@
     <string name="splatAppears">Verdammt! Der Geist hast dir angegreift!</string>
     <string name="start">START (Kreisel)</string>
     <string name="start2">START (Kompass)</string>
-    <string name="creditMessage"></string>
+    <string name="creditMessage"><b>Carlos Paradela Pérez:</b>  cparadela@correo.ugr.es     <b>Miguel Keane Cañizares:</b>  miguekeca@correo.ugr.es</string>
     <string name="creditTitle">Kredite</string>
-    <string name="instructionMessage"></string>
+    <string name="instructionMessage">Finden und schlagen Geister.</string>
     <string name="instructionTitle">Anleitugen (Englisch)</string>
 </resources>
